--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,3 +22,11 @@
 .right-margin-medium {
     margin-right: 5px;
 }
+
+.logout {
+    margin-top: 10px;
+}
+
+.left-aligned {
+    text-align: left;
+}
