LIBRARY-CATALOG-DEMO-APP-011

--- a/src/app/register-dialog/register-dialog.component.html
+++ b/src/app/register-dialog/register-dialog.component.html
@@ -15,7 +15,7 @@
         </mat-form-field>
         <mat-form-field appearance="fill" class="email">
             <mat-label>Password:</mat-label>
-            <input matInput placeholder="Password" [formControl]="password" required>
+            <input matInput type="password" placeholder="Password" [formControl]="password" required>
         </mat-form-field>
         <mat-form-field appearance="fill" class="email">
             <mat-label>Confirm password:</mat-label>
